# pyrevm-trace

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml  config.toml.example
.github/workflows/: ci.yml  publish.yml
docs/: PLAN.md
python/pyrevm_trace/: __init__.py  async_simulator.py  models.py  simulator.py
src/: executor.rs  gas_profiler.rs  lib.rs  tracer.rs  types.rs
tests/: test_async_simulator.py  test_gas_profiler.py  test_models.py  test_simulation.py  test_simulator.py  test_tracer.py
