[package]
name = "pyrevm-trace"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pyrevm_trace"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
revm = { version = "14", default-features = false, features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
